# EMlog

./: .gitignore  CMakeLists.txt  Makefile  README.md  stress_emlog  test_emlog
.github/workflows/: c-cpp.yml  ci.yml  coverage.yml
app/: CMakeLists.txt  emlog.c
app/include/: emlog.h
app/include/utils/: emlog.h
app/src/: emlog.c
app/src/utils/: emlog.c
include/: emlog.h
src/: emlog.c  stress.c  test.c
tests/: CMakeLists.txt  stress.c  test.c
tests/ITs/: integration_test.c  test_emlog_errors.c
tests/UTs/: test_private.c
tests/UTs/privateAPI/: test_private.c
tests/UTs/publicAPI/: emlog_set_level.c  test_emlog_init.c  test_emlog_timestamps.c
tests/unit/: emlog_set_level.c  test_emlog_default_writer.c  test_emlog_errors.c  test_emlog_init.c  test_emlog_journald.c  test_emlog_set_level.c  test_emlog_timestamps.c  unit_test_runner.c  unit_tests.h
utils/: build_libs.sh  build_tests.sh  gen_coverage.sh  make_UTs_all.sh  make_UTs_priv.sh  make_UTs_pub.sh  make_deb.sh  make_libs.sh  run_tests.sh
